--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+body{
+  font-family: 'Montserrat', sans-serif;
+}
 .hero{
   position: relative;
 }
@@ -18,7 +21,9 @@
   top:0;
   z-index: 2;
   width: 100%;
-  background-color: rgba(12, 12, 12, 0.5);
+  position: fixed;
+  top: 0;
+  background-color: rgba(12, 12, 12, 0.8);
 }
 .header .logo{
   display: grid;
@@ -29,7 +34,7 @@
 .header .logo h3{
   font-family: 'Pacifico', cursive;
   font-size: 1.5rem;
-  color: rgb(250, 92, 92);
+  color: rgb(250, 87, 136);
   align-self: center;
 }
 .header .title{
@@ -57,19 +62,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  filter: brightness(55%);
+  filter: brightness(70%);
 }
 .swiper-pagination{
   display: grid;
-  grid-template-columns: repeat(6,9rem);
+  grid-template-columns: repeat(6,auto);
   justify-content: center;
   width: 100%;
-  gap: 2rem;
+  gap: 4rem;
 }
 .swiper-bullet {
   display: grid;
   align-content: center;
-	width: auto;
+	width: fit-content;
+  padding: 10px 20px;
 	height: 40px;
 	text-align: center;
 	line-height: 30px;
@@ -79,21 +85,64 @@
 	color:#fff;
   letter-spacing: 1px;
 	opacity: 1;
+  cursor: pointer;
 }
 .swiper-bullet-active {
   color: #fff;
-	border-bottom: .2rem solid rgb(255, 65, 65);
+	/* border-bottom: .2rem solid rgb(255, 65, 65); */
+  background:rgba(0,0,0,0.7);
+  border-radius: 5px;
+}
+.hero .heading{
+  margin: 30px 20px;
+  color: rgb(238, 67, 67);
+  border-bottom: 0.3rem solid;
+  width: fit-content;
+  text-align: center;
+  font-family:'Montserrat', sans-serif ;
 }
 .card{
   height: 20rem;
   display: grid;
   grid-template-columns: 15rem 40rem;
-  padding: 20px;
-  gap: 20px 20px;
+  padding: 40px 90px;
+  gap: 2rem;
 }
 .card .card-image img{
   object-fit: cover;
   width: 100%;
  height: 18rem;
- border-radius: 15px;
+ border-radius: 8px;
+ box-shadow:3px 5px 15px rgba(24, 23, 23, 0.7);
+} 
+.card .card-text{
+  margin-top: 1.5rem;
+}
+.card .card-text .spans{
+  display: grid;
+  grid-template-columns: 1.5rem auto 11rem;
+  gap: 20px;
+  width: fit-content;
+}
+.spans .location{
+  align-self: center;
+  letter-spacing: 2px;
+  font-size: 1.07rem;
+  font-weight: 600;
+  color: rgb(24, 23, 23);
+}
+.spans .link{
+  align-self: center;
+}
+.spans .link a{
+  color: rgb(67, 125, 250);
+}
+.card-text .date{
+  margin: 10px 0px;
+  font-weight: 600;
+}
+.card-text .description{
+  line-height: 1.9rem;
+  color: rgb(122, 122, 122);
+  font-weight: 900;
 }
